--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "clickygame",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jayhua97.github.io/clickygame/",
   "dependencies": {
+    "gh-pages": "^2.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
